--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Simple task app backend for DevOps demo",
   "main": "server.js",
-
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "format": "prettier --write ."
   },
-
   "keywords": [
     "nodejs",
     "express",
@@ -27,9 +27,9 @@
     "mongoose": "^7.8.8"
   },
   "devDependencies": {
-    "eslint": "^9.34.0",
+    "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
-    "prettier": "^3.6.2"
+    "prettier": "^3.7.4"
   },
   "engines": {
     "node": ">=16.0.0"
